# ExtraLIB

./: .gitignore  CMakeLists.txt  README.md  hook.cpp  log.h  main.cpp  nbits.h  nfloats.h  nints.h  test.cpp  test_nints.cpp  unints.h
details/: array_type.h  int_base.h  integer.h  uint4_t.h
include/: complex.h  fraction.h  integer.h  log.h  ndarray.h  nfloats.h  random.h
include/details/: array_type.h  ndarray.h  uint4_t.h
src/: complex.h  fraction.h  integer.h  log.h  main.cpp  ndarray.h  nfloats.h
src/details/: array_type.h  ndarray.h  print_tuple.h
tests/: test_nfloats.cpp  test_nints.cpp  test_unints.cpp
